--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,6 +387,12 @@ h6 {
 #hero h2 {
   color: #fff;
   margin: 10px 0 0 0;
+  font-size: 18px;
+}
+
+#hero h3 {
+  color: #fff;
+  margin: 10px 0 0 0;
   font-size: 15px;
 }
 
