--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2159,6 +2159,8 @@ section {
   0%, 100% { opacity: 0; }
   20%, 80% { opacity: 1; }
 }
-.mtt{
-   margin-top:30px;
+@media (max-width:800px){
+	.mtt{
+   	margin-top:30px;
+	}
 }
