--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2160,8 +2160,17 @@ section {
   0%, 100% { opacity: 0; }
   20%, 80% { opacity: 1; }
 }
-@media (max-width:800px){
+@media (max-width:768px){
 	.mtt{
    	margin-top:30px;
 	}
+	#hero h2.subtitle {
+   	 font-size: 15px;
+	}
+	#hero h2 {
+    	font-size: 16px;
+	}
+	#hero h1 {
+    font-size: 26px;
+}
 }
