--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,7 +483,7 @@ section {
 
 .section-bg:before {
   content: "";
-  background: #1b1b1b;
+  background: #142136;
   position: absolute;
   bottom: 60px;
   top: 60px;
@@ -619,7 +619,7 @@ section {
   margin-top: 30px;
   padding: 30px;
   border-radius: 6px;
-  background: #252525;
+  background: #111b2b;
   transition: 0.3s;
   position: relative;
 }
@@ -801,7 +801,7 @@ section {
   margin-bottom: 20px;
   padding: 30px;
   border-radius: 6px;
-  background: #252525;
+  background: #111b2b;
   transition: 0.3s;
   position: relative;
 }
