--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1980,12 +1980,12 @@ section {
 #footer {
   color: #fff;
   font-size: 14px;
-  background: #111111;
+  background: #111b2b;
 }
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #1b1b1b;
+  background: #142136;
 }
 
 #footer .footer-top .footer-contact {
