--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,7 +483,7 @@ section {
 
 .section-bg:before {
   content: "";
-  background: #142136;
+  background: #111b2b;
   position: absolute;
   bottom: 60px;
   top: 60px;
@@ -1985,7 +1985,7 @@ section {
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #142136;
+  background: #111b2b;
 }
 
 #footer .footer-top .footer-contact {
@@ -2176,4 +2176,7 @@ section {
 	#header .logo img{
 	max-height:34px;	
 	}
+}
+.services .icon-box:hover{
+background:#111b2b !important;
 }
